--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <ul>
-            <img src="logo.png" alt="" id="logo">
+            <img src="logo.jpg" alt="" id="logo">
             <li>Overview</li>
             <li>Studying</li>
             <li>Hobbies</li>
@@ -60,19 +60,19 @@
                 <div class="grid-div5"> </div>
             </div>
         </section>
-        <section id="studying">
+        <section id="studying" style="visibility: hidden;">
             <h2>Studying</h2>
             <p>Track your study sessions and progress.</p>
         </section>
-        <section id="hobbies">
+        <section id="hobbies" style="visibility: hidden;">
             <h2>Hobbies</h2>
             <p>Explore and manage your hobbies.</p>
         </section>
-        <section id="self-learning">
+        <section id="self-learning" style="visibility: hidden;">
             <h2>Self Learning</h2>
             <p>Resources and tools for self-directed learning.</p>
         </section>
-        <section id="settings">
+        <section id="settings" style="visibility: hidden;">
             <h2>Settings</h2>
             <p>Customize your dashboard and preferences.</p>
         </section>
